# snkaim

./: .gitignore  pyproject.toml
src/snkaim/: app.py
src/snkaim/routes/: companies_routes.py  home_routes.py  items.py  sample.py
src/snkaim/services/: companies_service.py  items.py
src/snkaim/templates/: companies.html  home.html  items.html  layout.html  sample.html
