[project]
name = "snkaim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Takanashi", email = "nao69alter@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
]

[project.scripts]
snkaim = "snkaim:main"

[dependency-groups]
dev = [
    "djhtml>=3.0.11",
    "djlint>=1.36.4",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
cache-dir = ".ci_cache/.ruff_cache"
target-version = "py312"
line-length = 80

format.skip-magic-trailing-comma = false

lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501"]

lint.isort.force-single-line = false
lint.isort.lines-after-imports = 2
lint.isort.section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
lint.isort.order-by-type = true
lint.isort.known-first-party = ["snkaim"]

[tool.mypy]
cache_dir = ".ci_cache/.mypy_cache"
files = ["src", "tests"]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
cache_dir = ".ci_cache/.pytest_cache"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
log_cli = false

[tool.djlint]
profile = "jinja"
ignore = "H030,H031,H023"
indent = 4
max_attribute_length = 70
max_line_length = 90
preserve_leading_space = true
preserve_blank_lines = true
format_attribute_template_tags = true

[tool.djhtml]
tabwidth = 4
